--- a/app/src/main/res/layout/view_movie.xml
+++ b/app/src/main/res/layout/view_movie.xml
@@ -23,7 +23,7 @@
             android:layout_height="wrap_content"
             android:scaleType="centerCrop"
             app:ratio="1.5"
-            app:url="@{movie.posterPath}"
+            app:urlCover="@{movie.posterPath}"
             tools:src="@tools:sample/backgrounds/scenic" />
 
         <TextView
