--- a/app/src/main/res/layout/view_movie.xml
+++ b/app/src/main/res/layout/view_movie.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="movie"
-            type="xyz.jonthn.architectcoder.model.database.Movie" />
+            type="xyz.jonthn.domain.Movie"/>
     </data>
 
     <LinearLayout
