--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -36,14 +36,14 @@
                     android:fitsSystemWindows="true"
                     android:scaleType="centerCrop"
                     app:layout_collapseMode="parallax"
-                    app:urlDetail="@{viewmodel.url}"
+                    app:urlDetail="@{viewmodel.movie.backdropPath}"
                     tools:src="@mipmap/ic_launcher" />
 
                 <androidx.appcompat.widget.Toolbar
                     android:id="@+id/movieDetailToolbar"
                     android:layout_width="match_parent"
                     android:layout_height="?attr/actionBarSize"
-                    app:title="@{viewmodel.title}" />
+                    app:title="@{viewmodel.movie.title}" />
 
             </com.google.android.material.appbar.CollapsingToolbarLayout>
 
@@ -66,7 +66,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
                     android:padding="16dp"
-                    android:text="@{viewmodel.overview}"
+                    android:text="@{viewmodel.movie.overview}"
                     android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
 
                 <TextView
@@ -88,9 +88,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
-            android:src="@drawable/ic_favorite_off"
-            app:favorite="@{viewmodel.favorite}"
             android:onClick="@{() -> viewmodel.onFavoriteClicked()}"
+            android:src="@drawable/ic_favorite_off"
+            app:favorite="@{viewmodel.movie.favorite}"
             app:layout_anchor="@id/appBarLayout"
             app:layout_anchorGravity="bottom|end" />
 
